[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slurmviz"
version = "0.1.0"
description = "A terminal UI dashboard for Slurm GPU cluster status"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=1.0.0",
]

[project.scripts]
slurmviz = "slurmviz:main"

[project.urls]
Homepage = "https://github.com/VigneshSrinivasan10/slurmviz"
Repository = "https://github.com/VigneshSrinivasan10/slurmviz"
